--- a/BluetoothCtrl/src/main/res/layout/fragment_device_ctrl.xml
+++ b/BluetoothCtrl/src/main/res/layout/fragment_device_ctrl.xml
@@ -28,19 +28,10 @@
         style="@style/TextAppearance.AppCompat.Widget.Base.ActionBar.Title"
         android:layout_height="wrap_content" />
 
-    <Switch
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/ctrl_switch"
-        android:id="@+id/ctrl_switch"
-        android:checked="false"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:height="100dp"
-        android:layout_gravity="center"
-        android:padding="15dp"
-        android:background="#cccccc"/>
+        android:id="@android:id/list"></ListView>
 
     <TextView
         android:layout_width="match_parent"
