--- a/BluetoothCtrl/src/main/res/menu/main_ctrl.xml
+++ b/BluetoothCtrl/src/main/res/menu/main_ctrl.xml
@@ -2,9 +2,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainCtrlActivity" >
-    
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
+
+    <item android:id="@+id/action_help"
+        android:title="Help"
+        android:orderInCategory="101"
+        app:showAsAction="ifRoom"/>
+
 </menu>
