--- a/BluetoothCtrl/src/main/res/layout/fragment_device_ctrl.xml
+++ b/BluetoothCtrl/src/main/res/layout/fragment_device_ctrl.xml
@@ -23,13 +23,13 @@
         android:padding="15dp"
         android:height="50dp"
         android:textStyle="bold"
-        style="@style/TextAppearance.AppCompat.Widget.Base.ActionBar.Title"
+        style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
         android:layout_height="wrap_content" />
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@android:id/list"></ListView>
+        android:id="@android:id/list"/>
 
 
     <TextView
